update fullstack docker

--- a/docker_template/fullstack_docker/.env
+++ b/docker_template/fullstack_docker/.env
@@ -1,4 +1,14 @@
 MONGO_USERNAME=username
 MONGO_PASSWORD=password
+MONGO_URL="mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/"
 MONGOEXPRESS_USERNAME=express_username
 MONGOEXPRESS_PASSWORD=express_password
+
+DATABASE_SHARED_VOLUME=./database
+BACKEND_SHARED_VOLUME=./django_backend
+FRONTEND_SHARED_VOLUME=./svelte_frontend
+
+FRONTEND_PORT=5050
+BACKEND_PORT=8000
+MONGODB_PORT=27017
+MONGO_EXPRESS_PORT=8081
