--- a/docker_template/fullstack_docker/docker-compose.yml
+++ b/docker_template/fullstack_docker/docker-compose.yml
@@ -3,35 +3,44 @@ version: '3'
 services:
 
   frontend:
-    build: ./svelte-docker
+    build: ./svelte_frontend
+    container_name: svelte_frontend
     ports:
-      - "5000:80"
+      - "${FRONTEND_PORT}:80"
     restart: unless-stopped
 
-  # backend:
-  #   build: ./NodeJS_backend
-  #   ports:
-  #     - "3001:3001"
-  #   restart: unless-stopped
+
+  backend:
+    build: ./django_backend
+    container_name: django_backend
+    ports:
+      - "${BACKEND_PORT}:8000"
+    restart: unless-stopped
+    volumes:
+      - ${BACKEND_SHARED_VOLUME}:/app
 
   mongo:
     image: mongo:latest
+    container_name: mongoDB
+    ports:
+      - "${MONGODB_PORT}:27017"
     restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
     volumes:
-      - ./database:/data/db
+      - ${DATABASE_SHARED_VOLUME}:/data/db
 
   # TODO: disable mongo-express in prod.
   mongo-express:
     image: mongo-express:latest
+    container_name: mongo_express
     restart: unless-stopped
     ports:
-      - 8081:8081
+      - "${MONGO_EXPRESS_PORT}:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: "${MONGO_USERNAME}"
       ME_CONFIG_MONGODB_ADMINPASSWORD: "${MONGO_PASSWORD}"
-      ME_CONFIG_MONGODB_URL: "mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/"
+      ME_CONFIG_MONGODB_URL: "${MONGO_URL}"
       ME_CONFIG_BASICAUTH_USERNAME: "${MONGOEXPRESS_USERNAME}"
       ME_CONFIG_BASICAUTH_PASSWORD: "${MONGOEXPRESS_PASSWORD}"
